This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ DVB: Show current event time in the status bar
+ DVB: Add context menu to the navigation dialog
+ Add Finnish translation
* DVB: Improve channel switching speed
* Updated Arabic, Basque, Catalan, French, Galician, Japanese, Korean, Romanian, Slovak, Spanish, Turkish
  and Ukrainian translations
! Ticket #2953, DVB: Fix crash when closing window right after switching channel
! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
! Ticket #4436, DVB: Improve compatibility with certain tuners
! Ticket #4933, ASS/SSA subtitles: Fix a crash for elements with no horizontal border but a vertical one
! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
! Ticket #4938, Fix resetting the settings from the "Options" dialog: some settings were (randomly) not
  restored to their default value
! Ticket #4954, Open dialog: Support quoted paths


1.7.7 - 05 October 2014
=======================
+ Accept loading more than one subtitle file at a time using the "Load subtitle" dialog or drag-and-drop
+ Add advanced settings page
+ Add Arabic and Thai translations
+ Completely reworked subtitle queue:
    - The queue should be quite faster than the older one for a similar number of buffered subpictures.
      It should also work much better when the number of subpictures becomes important
    - Subtitle animation can now be disabled even when using no buffering
    - Add the ability to choose at which state (in percentage of the full animation) an animated subtitle
      will be rendered when the animation is turned off
    - Add the ability to control the rate of the animation (in percentage of the movie frame rate)