@@ -13,6 +13,7 @@ next version - not released yet
 + DVB: Show current event time in the status bar
 + DVB: Add context menu to the navigation dialog
 + Add Finnish translation
++ Ticket #4941, Support embedded cover-art
 * DVB: Improve channel switching speed
 * Updated Arabic, Basque, Catalan, French, Galician, Japanese, Korean, Romanian, Slovak, Spanish, Turkish
   and Ukrainian translations
